src/content/docs/sdk/flutter/v5/features/privacy.mdx
---
title: Set up privacy features
description: Configure features that you can use to handle user privacy in your app.
slug: en/sdk/flutter/features/privacy
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/flutter/v4/features/privacy
---

The Adjust SDK contains features that you can use to handle user privacy in your app.

## Send erasure request {#send-erasure-request}

<CodeBlock title="Method signature">

```dart
static void gdprForgetMe()
```

</CodeBlock>

The EU’s General Data Protection Regulation (GDPR) and similar privacy laws worldwide (CCPA, LGPD, etc.) grant data subjects comprehensive rights when it comes to the processing of their personal data. These rights include, among others, the right to erasure (see [Art. 17 GDPR](https://gdpr.eu/article-17-right-to-be-forgotten/))([1](https://help.adjust.com/en/article/gdpr#ref-1)). As a data processor, Adjust is obliged to support you (the data controller) in the processing of such requests from your (app) users.

You can send the user's erasure request to Adjust by calling the `gdprForgetMe` method. Once Adjust has been notified:

-  Adjust will permanently delete all of the user’s historical personal data from its internal systems and database.
-  Adjust will no longer receive data from this user/device via the Adjust SDK.([2](https://help.adjust.com/en/article/gdpr#ref-2))

```dart
Adjust.gdprForgetMe();
```

## Third-party sharing for specific users {#third-party-sharing-for-specific-users}

You can use the Adjust SDK to record when a user changes their third-party sharing settings. Third party sharing settings are configured using the `AdjustThirdPartySharing` class.

### Instantiate an AdjustThirdPartySharing object {#instantiate-an-adjustthirdpartysharing-object}

<CodeBlock title="Method signature">

```dart
AdjustThirdPartySharing(bool? _isEnabled)
```

</CodeBlock>

To enable or disable third party sharing with the Adjust SDK, you need to instantiate an `AdjustThirdPartySharing` object. This object contains variables that control how third party sharing is handled by Adjust.

To instantiate a third party sharing object, create a new `AdjustThirdPartySharing` instance and pass the following parameters:

-  `isEnabled` (`bool`): Whether third party sharing is enabled. Pass `true` to enable third party sharing or `false` to disable third party sharing

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(true);
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

<Callout type="note">

If you set the `isEnabled` property to `false`, Adjust stops sharing the user's data with third parties. The Adjust SDK continues to work as expected.

</Callout>

Once you've instantiated your `AdjustThirdPartySharing` object, you can send the information to Adjust by calling the `Adjust.trackThirdPartySharing` method with your `AdjustThirdPartySharing` instance as an argument.

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(false);
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

### Send granular information {#send-granular-information}

<CodeBlock title="Method signature">

```dart
void addGranularOption(String partnerName, String key, String value)
```

</CodeBlock>

You can attach granular information when a user updates their third-party sharing preferences. Use this information to communicate more detail about a user's decision. To do this, call the `addGranularOption` method with the following parameters:

-  `partnerName` (`String`): The name of the partner for whom the granular option applies.
-  `key` (`String`): The option key.
-  `value` (`String`): The option value.

The following partners are available:

<Table>

| Partner name            | String value                |
| ----------------------- | --------------------------- |
| AppleAds                | `apple_ads`                 |
| Facebook                | `facebook`                  |
| GoogleAds               | `adwords`                   |
| GoogleMarketingPlatform | `google_marketing_platform` |
| Snapchat                | `snapchat`                  |
| Tencent                 | `tencent`                   |
| TikTokSan               | `tiktok_san`                |
| X (formerly Twitter)    | `twitter`                   |
| YahooGemini             | `yahoo_gemini`              |
| YahooJapanSearch        | `yahoo_japan_search`        |

</Table>

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(null);
//...
adjustThirdPartySharing.addGranularOption('PartnerA', 'key', 'value');
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

#### Manage Facebook Limited Data Use {#manage-facebook-limited-data-use}

<Callout type="important">

The Adjust SDK sends information to Facebook as soon as the app is installed. You need to make sure you call this method **before** initializing the SDK.

</Callout>

Facebook provides a feature called Limited Data Use (LDU) to comply with the California Consumer Privacy Act (CCPA). This feature enables you to notify Facebook when a California-based user is opted out of the sale of data. You can also use it if you want to opt all users out by default.

You can update the Facebook LDU status by passing the following arguments to the `addGranularOption` method:

<Table>

| Parameter                         | Description                                                                                                                                                                                         |
| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partner_name`                    | Use `facebook` to toggle LDU.                                                                                                                                                                       |
| `data_processing_options_country` | The country in which the user is located.<ul><li>`0`: Request that Facebook use geolocation.</li><li>`1`: United States of America.</li></ul>                                                       |
| `data_processing_options_state`   | Notifies Facebook in which state the user is located.<ul><li>`0`: Request that Facebook use geolocation.</li><li>`1000`: California.</li><li>`1001`: Colorado</li><li>`1002`: Connecticut</li></ul> |

</Table>

<Callout type="note">

If you call this method with a `0` value for **either** `data_processing_options_country` or `data_processing_options_state`, the Adjust SDK passes **both** fields back as `0`.

</Callout>

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(null);
//...
adjustThirdPartySharing.addGranularOption('facebook', 'data_processing_options_country', '1');
adjustThirdPartySharing.addGranularOption('facebook', 'data_processing_options_state', '1000');
//...
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

#### Provide consent data to Google (Digital Markets Act compliance) {#provide-consent-data-to-google-digital-markets-act-compliance}

<Callout type="important">

Passing these options is required if you use Google Ads or Google Marketing Platform and have users located in the European Economic Area (EEA).

</Callout>

To comply with the EU's Digital Markets Act (DMA), Google Ads and the Google Marketing Platform require explicit consent to receive Adjust’s attribution requests to their APIs. To communicate this consent, you need to add the following granular options to your third party sharing instance for the partner `google_dma`.

<Table>

| Key                  | Value                            | Description                                                                                                                                                                                                             |
| -------------------- | -------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `eea`                | `1` (positive) \| `0` (negative) | Informs Adjust whether users installing the app are within the European Economic Area.<br />This includes EU member states, Switzerland, Norway, Iceland and Slovenia.                                                  |
| `ad_personalization` | `1` (positive) \| `0` (negative) | Informs Adjust whether users consented with being served personalized ads via Google Ads and/or Google Marketing Platform.<br />This parameter also informs the `npa` parameter reserved for Google Marketing Platform. |
| `ad_user_data`       | `1` (positive) \| `0` (negative) | Informs Adjust whether users consented with their advertiser ID being leveraged for attribution purposes.                                                                                                               |

</Table>

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addGranularOption('google_dma', 'eea', '1');
adjustThirdPartySharing.addGranularOption('google_dma', 'ad_personalization', '1');
adjustThirdPartySharing.addGranularOption('google_dma', 'ad_user_data', '1');
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

### Update partner sharing settings {#update-partner-settings}

<CodeBlock title="Method signature">

```dart
void addPartnerSharingSetting(String partnerName, String key, bool value)
```

</CodeBlock>

By default, Adjust shares all metrics with any partners you've configured in your app settings. You can use the Adjust SDK to update your third party sharing settings on a per-partner basis. To do this, call the `addPartnerSharingSetting` method with the following arguments:

<Table autoWidth="1,2,3">

| Argument      | Data type | Description                                                                                                                                                                                                |
| ------------- | --------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partnerName` | `String`  | The name of the partner. [Download the full list of available partners](https://assets.ctfassets.net/5s247im0esyq/2QQROOadVqJzrME7yXKObe/7aca25e53d38befb2d469809e62b6fcc/3rd-party-sharing-partners.xlsx) |
| `key`         | `String`  | The metric to share with the partner                                                                                                                                                                       |
| `value`       | `Boolean` | The user's decision                                                                                                                                                                                        |

</Table>

You can use the `key` to specify which metrics you want to disable or re-enable. If you want to enable/disable sharing all metrics, you can use the `all` key. The full list of available metrics is available below:

<ListColumns>

-  `ad_revenue`
-  `all`
-  `attribution`
-  `update`
-  `att_update`
-  `cost_update`
-  `event`
-  `install`
-  `reattribution`

---

-  `reattribution_reinstall`
-  `reinstall`
-  `rejected_install`
-  `rejected_reattribution`
-  `sdk_click`
-  `sdk_info`
-  `session`
-  `subscription`
-  `uninstall`

</ListColumns>

When you set a `false` value against a metric for a partner, Adjust stops sharing the metric with the partner.

<Callout type="tip">

If you only want to share a few metrics with a partner, you can pass the `all` key with a `false` value to disable all sharing and then pass individual metrics with a `true` value to limit what you share.

</Callout>

#### Examples {#examples}

If you want to stop sharing all metrics with a specific partner, pass the `all` key with a `false` value.

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(true);
adjustThirdPartySharing.addPartnerSharingSetting('PartnerA', 'all', false);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

To re-enable sharing, pass the `all` key with a `true` value.

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(true);
adjustThirdPartySharing.addPartnerSharingSetting('PartnerA', 'all', true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

You can stop or start sharing specific metrics by calling the `addPartnerSharingSetting` method multiple times with different keys. For example, if you only want to share event information with a partner, you can pass:

-  `all` with a `false` value to disable sharing all information.
-  `event` with a `true` value to enable event sharing

<Callout type="note">

Specific keys always take priority over `all`. If you pass `all` with other keys, the individual key values override the `all` setting.

</Callout>

```dart
AdjustThirdPartySharing adjustThirdPartySharing = new AdjustThirdPartySharing(true);
adjustThirdPartySharing.addPartnerSharingSetting('PartnerA', 'all', false);
adjustThirdPartySharing.addPartnerSharingSetting('PartnerA', 'event', true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

## Set URL strategy {#set-url-strategy}

<CodeBlock title="Method signature">

```dart
void setUrlStrategy(List<String> urlStrategyDomains, bool useSubdomains, bool isDataResidency)
```

</CodeBlock>

The URL strategy feature allows you to set either:

-  The country in which Adjust stores your data (data residency).
-  The endpoint to which the Adjust SDK sends traffic (URL strategy).

This is useful if you're operating in a country with strict privacy requirements. When you set your URL strategy, Adjust stores data in the selected data residency region or sends traffic to the chosen domain.

To set your country of data residency, call the `setUrlStrategy` method on your `AdjustConfig` instance with the following parameters:

-  `urlStrategyDomains` (`List<String>`): The country or countries of data residence, or the endpoints to which you want to send SDK traffic.
-  `useSubdomains` (`bool`): Whether the domain should be treated as an Adjust domain. If `true`, the SDK will prefix the domains with Adjust-specific subdomains. If `false`, the SDK will use the provided domain as-is, without adding any prefixes.
-  `isDataResidency` (`bool`): Whether the domain should be used for data residency.

<Table autoWidth="1,2">

| IR: strategy              | Main and fallback domain          | Use sub domains | Is Data Residency |
| ------------------------- | --------------------------------- | --------------- | ----------------- |
| EU data residency         | `'eu.adjust.com'`                 | `true`          | `true`            |
| Turkish data residency    | `'tr.adjust.com'`                 | `true`          | `true`            |
| US data residency         | `'us.adjust.com'`                 | `true`          | `true`            |
| China global URL strategy | `'adjust.world'`, `'adjust.com'`  | `true`          | `false`           |
| China URL strategy        | `'adjust.cn'`, `'adjust.com'`     | `true`          | `false`           |
| China only URL strategy   | `'adjust.cn'`                     | `true`          | `false`           |
| India URL strategy        | `'adjust.net.in'`, `'adjust.com'` | `true`          | `false`           |

</Table>

### Examples {#examples-1}

<CodeBlock title="India URL strategy">

```dart
adjustConfig.setUrlStrategy(new List<String> ['adjust.net.in', 'adjust.com'], true, false);
```

</CodeBlock>

<CodeBlock title="China URL strategy">

```dart
adjustConfig.setUrlStrategy(new List<String> ['adjust.world', 'adjust.com'], true, false);
```

</CodeBlock>

<CodeBlock title="China only URL strategy">

```dart
adjustConfig.setUrlStrategy(new List<String> ['adjust.cn'], true, false);
```

</CodeBlock>

<CodeBlock title="EU data residency">

```dart
adjustConfig.setUrlStrategy(new List<String> ['eu.adjust.com']', true, true);
```

</CodeBlock>

<CodeBlock title="Turkey data residency">

```dart
adjustConfig.setUrlStrategy(new List<String> ['tr.adjust.com'], true, true);
```

</CodeBlock>

<CodeBlock title="US data residency">

```dart
adjustConfig.setUrlStrategy(new List<String> ['us.adjust.com'], true, true);
```

</CodeBlock>

## Consent measurement for specific users {#consent-measurement-for-specific-users}

<CodeBlock title="Method signature">

```dart
static void trackMeasurementConsent(bool measurementConsent)
```

</CodeBlock>

If you're using [Data Privacy settings](https://help.adjust.com/en/article/manage-data-collection-and-retention) in your Adjust dashboard, you need to set up the Adjust SDK to work with them. This includes settings such as consent expiry period and user data retention period.

To toggle this feature, call the `trackMeasurementConsent` method with the following argument:

-  `measurementConsent` (`bool`): Whether consent measurement is enabled (`true`) or not (`false`).

When enabled, the SDK communicates the data privacy settings to Adjust's servers. Adjust's servers then applies your data privacy rules to the user. The Adjust SDK continues to work as expected.

```dart
Adjust.trackMeasurementConsent(true);
```

## Privacy for children {#privacy-for-children}

The Adjust SDK includes the `com.google.android.gms.permission.AD_ID` permission by default. You can remove it by adding a remove directive if need to make your app COPPA-compliant or if you don't target the Google Play Store.

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
```

</CodeBlock>

See Google's [`AdvertisingIdClient.Info documentation`](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info#public-string-getid) for more information about this permission.

### COPPA compliance {#coppa-compliance}

<CodeBlock title="Property declaration">

```dart
bool? isCoppaCompliantEnabled;
```

</CodeBlock>

If you need your app to be compliant with the Children's Online Privacy Protection Act (COPPA), assign a `bool` value to the `isCoppaCompliantEnabled` property on your config instance. Setting this property to `true`:

1. Disables third-party sharing **before** the user launches their first `session`.
2. Prevents the SDK from reading device and advertising IDs (for example: `gps_adid` and `android_id`).

```dart
AdjustConfig adjustConfig = new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
//...
adjustConfig.isCoppaCompliantEnabled = true;
//...
Adjust.initSdk(adjustConfig);
```

You can disable COPPA compliance by calling this method with a `false` argument.

<Callout type="important">

Disabling COPPA compliance **doesn't** re-enable third-party sharing. You need to [re-enable third-party sharing](#third-party-sharing-for-specific-users) for the user.

</Callout>

### Play Store Kids Apps (Android only) {#play-store-kids-apps-android-only}

<CodeBlock title="Property declaration">

```dart
bool? isPlayStoreKidsAppEnabled;
```

</CodeBlock>

If your app targets users under the age of 13, and the install region **isn't** the USA, you need to mark it as a Kids App. This prevents the SDK from reading device and advertising IDs (for example: `gps_adid` and `android_id`).

To mark your app as a Kids App, assign a `bool` value to the `isPlayStoreKidsAppEnabled` property on your config instance. Set to `true` to mark the app as a Kids App, or `false` to mark the app as a non-Kids App.

```dart
AdjustConfig adjustConfig = new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
//...
adjustConfig.isPlayStoreKidsAppEnabled = true;
//...
Adjust.initSdk(adjustConfig);
```
